==> 1venom/abcd/GPRS/HARDWARE/RC522/rc522.c <==
#include "stm32f10x_gpio.h"
#include "rc522.h"
#include "io.h"

char PcdComMF522(unsigned char Command,
                 unsigned char *pInData,
                 unsigned char InLenByte,
                 unsigned char *pOutData,
                 unsigned int  *pOutLenBit)
{
    char status = MI_ERR;
    unsigned char irqEn   = 0x00;
    unsigned char waitFor = 0x00;
    unsigned char lastBits;
    unsigned char n;
    unsigned int i;
    switch (Command)
    {
       case PCD_AUTHENT:		 //验证密钥
          irqEn   = 0x12;
          waitFor = 0x10;
          break;
       case PCD_TRANSCEIVE:		//发送并接收数据
          irqEn   = 0x77;
          waitFor = 0x30;
          break;
       default:
         break;
    }

    WriteRawRC(ComIEnReg,irqEn|0x80);			//Set IRQ
    ClearBitMask(ComIrqReg,0x80);
    WriteRawRC(CommandReg,PCD_IDLE);			//取消当前命令
    SetBitMask(FIFOLevelReg,0x80);				//Clear FlushBuffer Bit

    for (i=0; i<InLenByte; i++)
    {   WriteRawRC(FIFODataReg, pInData[i]);    }
    WriteRawRC(CommandReg, Command);			 //发送并接收数据


    if (Command == PCD_TRANSCEIVE)
    {    SetBitMask(BitFramingReg,0x80);  }	 //启动数据的发送，与收发命令一起使用有效

//    i = 600;//根据时钟频率调整，操作M1卡最大等待时间25ms
		i = 6000;
    do
    {
         n = ReadRawRC(ComIrqReg);
         i--;
    }
    while ((i!=0) && !(n&0x01) && !(n&waitFor));	 //等待发送完毕
    ClearBitMask(BitFramingReg,0x80);

    if (i!=0)
    {
         if(!(ReadRawRC(ErrorReg)&0x1B))
         {
             status = MI_OK;
             if (n & irqEn & 0x01)
             {   status = MI_NOTAGERR;   }
             if (Command == PCD_TRANSCEIVE)
             {
               	n = ReadRawRC(FIFOLevelReg);			//读取FIFO缓冲区中保存的字节数
              	lastBits = ReadRawRC(ControlReg) & 0x07;
                if (lastBits)
                {   *pOutLenBit = (n-1)*8 + lastBits;   }
                else
                {   *pOutLenBit = n*8;   }
                if (n == 0)
                {   n = 1;    }
                if (n > MAXRLEN)
                {   n = MAXRLEN;   }
                for (i=0; i<n; i++)
                {   pOutData[i] = ReadRawRC(FIFODataReg);    }
            }
         }
         else
         {   status = MI_ERR;   }

   }


   SetBitMask(ControlReg,0x80);           // stop timer now
   WriteRawRC(CommandReg,PCD_IDLE);
   return status;
}

void CalulateCRC(unsigned char *pIndata,unsigned char len,unsigned char *pOutData)
{
    unsigned char i,n;
    ClearBitMask(DivIrqReg,0x04);
    WriteRawRC(CommandReg,PCD_IDLE);
    SetBitMask(FIFOLevelReg,0x80);		//清除FlushBuffer,写指针及寄存器ErrReg的BufferOvfl标志被清除
    for (i=0; i<len; i++)
    {   WriteRawRC(FIFODataReg, *(pIndata+i));   }
    WriteRawRC(CommandReg, PCD_CALCCRC);
    i = 0xFF;
    do
    {
        n = ReadRawRC(DivIrqReg);
        i--;
    }
    while ((i!=0) && !(n&0x04));
    pOutData[0] = ReadRawRC(CRCResultRegL);
    pOutData[1] = ReadRawRC(CRCResultRegM);
}

char M500PcdConfigISOType(unsigned char type)
{
   if (type == 'A')                     //ISO14443_A
   {
       ClearBitMask(Status2Reg,0x08);


       WriteRawRC(ModeReg,0x3D);//3F

       WriteRawRC(RxSelReg,0x86);//84

       WriteRawRC(RFCfgReg,0x7F);   //4F

   	   WriteRawRC(TReloadRegL,30);//tmoLength);// TReloadVal = 'h6a =tmoLength(dec)
	   WriteRawRC(TReloadRegH,0);
       WriteRawRC(TModeReg,0x8D);
	   WriteRawRC(TPrescalerReg,0x3E);
  //     PcdSetTmo(106);
	   os_delay_us(1);
       PcdAntennaOn();
   }
   else{ return MI_NOTAGERR; }

   return MI_OK;
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
    unsigned char  i, ucAddr;

    os_delay_us(1);
    MF522_SCK_0;
    os_delay_us(1);
    MF522_NSS_0;
    os_delay_us(1);
    ucAddr = ((Address<<1)&0x7E);

    for(i=8;i>0;i--)
    {
    	if((ucAddr&0x80)==0x80)
    		MF522_SI_1;
    	else
    		MF522_SI_0;

    	os_delay_us(1);

        MF522_SCK_1;
        os_delay_us(1);
        ucAddr <<= 1;
        MF522_SCK_0;
        os_delay_us(1);
    }

    for(i=8;i>0;i--)
    {
    	  os_delay_us(1);
    	if((value&0x80)==0x80)
    		MF522_SI_1;
    	else
    		MF522_SI_0;
    	  os_delay_us(1);
        MF522_SCK_1;
        os_delay_us(1);
        value <<= 1;
        MF522_SCK_0;
        os_delay_us(1);
    }
    os_delay_us(1);
    MF522_NSS_1;
    os_delay_us(1);
    MF522_SCK_1;
}

unsigned char ReadRawRC(unsigned char Address)
{
     unsigned char i,ucAddr;
     unsigned char ucResult=0;

     os_delay_us(1);
     MF522_SCK_0;
     os_delay_us(1);
     MF522_NSS_0;
     os_delay_us(1);
     ucAddr = ((Address<<1)&0x7E)|0x80;

     for(i=8;i>0;i--)
     {
    	  os_delay_us(1);
     	if((ucAddr&0x80)==0x80)
     		MF522_SI_1;
     	else
     		MF522_SI_0;
     	  os_delay_us(1);
         MF522_SCK_1;
         os_delay_us(1);
         ucAddr <<= 1;
         os_delay_us(1);
         MF522_SCK_0;
         os_delay_us(1);
     }

     for(i=8;i>0;i--)
     {
         MF522_SCK_1;
         os_delay_us(1);
         ucResult <<= 1;
         ucResult|=MF522_SO;
         os_delay_us(1);
         MF522_SCK_0;
         os_delay_us(1);
     }

     MF522_NSS_1;
     os_delay_us(1);
     MF522_SCK_1;
     os_delay_us(1);
     return ucResult;
}

char PcdReset(void)
{  

    MF522_RST_1;
    os_delay_us(100);
    MF522_RST_0;
    os_delay_us(100);
    MF522_RST_1;
    os_delay_us(100);
    WriteRawRC(CommandReg,PCD_RESETPHASE);
    os_delay_us(100);

    WriteRawRC(ModeReg,0x3D);            //潞脥Mifare驴篓脥篓脩露拢卢CRC鲁玫脢录脰碌0x6363

    WriteRawRC(TReloadRegL,30);
    WriteRawRC(TReloadRegH,0);
    WriteRawRC(TModeReg,0x8D);
    WriteRawRC(TPrescalerReg,0x3E);
    WriteRawRC(TxAutoReg,0x40);
    return MI_OK;
}

void InitRc522(void)
{
		GPIO_InitTypeDef GPIO_InitStructure;

		RCC_APB2PeriphClockCmd(	RCC_APB2Periph_GPIOB|RCC_APB2Periph_GPIOA, ENABLE );//PORTB时钟使能 


		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;	 //IO-->PF0、PF1 端口配置
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 //IO口速度为50MHz
    GPIO_Init(GPIOA, &GPIO_InitStructure);					 //根据设定参数初始化PF0、PF1
    GPIO_ResetBits(GPIOA,GPIO_Pin_8);			             //PF1输出低
    //GPIO_SetBits(GPIOF,GPIO_Pin_0);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;	 //IO-->PF0、PF1 端口配置
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 //IO口速度为50MHz
    GPIO_Init(GPIOB, &GPIO_InitStructure);					 //根据设定参数初始化PF0、PF1
    GPIO_ResetBits(GPIOB,GPIO_Pin_12);			             //PF1输出低
    //GPIO_SetBits(GPIOF,GPIO_Pin_0);
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_13 | GPIO_Pin_14 ;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;//GPIO_Mode_AF_PP;  //PB13/14/15复用推挽输出 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);//初始化GPIOB
	
	
		GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_15;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;  //PB13/14/15复用推挽输出 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);//初始化GPIOB
	
	
	
	PcdReset();
	PcdAntennaOff();
	os_delay_us(1);
	PcdAntennaOn();
	Status = M500PcdConfigISOType('A');
}
